レスポンシブ対応

--- a/src/pages/editTask.scss
+++ b/src/pages/editTask.scss
@@ -5,6 +5,9 @@ $white: #ffffff;
 $blue: #242f9b;
 
 .edit-task {
+  @media screen and (max-width: 1000px) {
+    width: 100%;
+  }
   width: 1000px;
   margin: 0 auto;
 
