--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -7,7 +7,12 @@ $light-gray: #f5f5f5;
 .taskList {
   margin: 50px auto;
   list-style: none;
+  @media screen and (max-width: 1000px) {
+    width: 80%;
+    margin: 0 10%;
+  }
   width: 1000px;
+  margin: 0 auto;
 
   .error-message {
     color: $red;
@@ -65,7 +70,7 @@ $light-gray: #f5f5f5;
 
 .task-item {
   list-style-type: none;
-  height: 70px;
+  height: auto;
   width: calc(100% - 25px);
   background-color: $light-gray;
   padding-left: 25px;
