--- a/src/pages/newList.scss
+++ b/src/pages/newList.scss
@@ -6,6 +6,10 @@ $white: #ffffff;
 $grey: #555555;
 
 .new-list {
+  @media screen and (max-width: 1000px) {
+    width: 95%;
+    margin-left: 5%;
+  }
   width: 1000px;
   margin: 0 auto;
 
