--- a/src/pages/newTask.scss
+++ b/src/pages/newTask.scss
@@ -6,6 +6,9 @@ $white: #ffffff;
 $grey: #555555;
 
 .new-task {
+  @media screen and (max-width: 1000px) {
+    width: 100%;
+  }
   width: 1000px;
   margin: 0 auto;
 
