--- a/src/pages/editList.scss
+++ b/src/pages/editList.scss
@@ -5,11 +5,16 @@ $white: #ffffff;
 $blue: #242f9b;
 
 .edit-list {
-  @media screen and (max-width: 1000px) {
-    width: 100%;
-  }
   width: 1000px;
   margin: 0 auto;
+  @media screen and (max-width: 768px) {
+    width: 95%;
+    margin-left: 5%;
+  }
+  @media screen and (max-width: 320px) {
+    width: 90%;
+    margin: 0 5%;
+  }
 
   .error-message {
     color: $red;
@@ -21,6 +26,9 @@ $blue: #242f9b;
     .edit-list-title {
       width: 300px;
       margin-bottom: 25px;
+      @media screen and (max-width: 320px) {
+        width: 100%;
+      }
     }
 
     .delete-list-button {
