--- a/src/pages/home.scss
+++ b/src/pages/home.scss
@@ -13,6 +13,10 @@ $light-gray: #f5f5f5;
     width: 80%;
     margin: 0 10%;
   }
+  @media screen and (max-width: 320px) {
+    width: 90%;
+    margin: 0 5%;
+  }
 
   .error-message {
     color: $red;
@@ -31,6 +35,9 @@ $light-gray: #f5f5f5;
     list-style: none;
     display: flex;
     overflow-x: auto;
+    @media screen and (max-width: 768px) {
+      flex-wrap: wrap;
+    }
 
     .list-tab-item {
       flex-shrink: 0;
@@ -41,6 +48,12 @@ $light-gray: #f5f5f5;
       border: solid 1px $blue;
       justify-content: center;
       align-items: center;
+      @media screen and (max-width: 768px) {
+        width: calc(50% - 60px);
+      }
+      @media screen and (max-width: 320px) {
+        width: calc(100% - 60px);
+      }
     }
 
     .active {
