--- a/src/pages/newList.scss
+++ b/src/pages/newList.scss
@@ -6,12 +6,16 @@ $white: #ffffff;
 $grey: #555555;
 
 .new-list {
-  @media screen and (max-width: 1000px) {
+  width: 1000px;
+  margin: 0 auto;
+  @media screen and (max-width: 768px) {
     width: 95%;
     margin-left: 5%;
   }
-  width: 1000px;
-  margin: 0 auto;
+  @media screen and (max-width: 320px) {
+    width: 90%;
+    margin: 0 5%;
+  }
 
   .error-message {
     color: $red;
@@ -23,6 +27,9 @@ $grey: #555555;
     .new-list-title {
       width: 300px;
       margin-bottom: 25px;
+      @media screen and (max-width: 320px) {
+        width: 100%;
+      }
     }
 
     .new-list-button {
