--- a/src/pages/newTask.scss
+++ b/src/pages/newTask.scss
@@ -6,11 +6,16 @@ $white: #ffffff;
 $grey: #555555;
 
 .new-task {
-  @media screen and (max-width: 1000px) {
-    width: 100%;
-  }
   width: 1000px;
   margin: 0 auto;
+  @media screen and (max-width: 768px) {
+    width: 95%;
+    margin-left: 5%;
+  }
+  @media screen and (max-width: 320px) {
+    width: 90%;
+    margin: 0 5%;
+  }
 
   .error-message {
     color: $red;
@@ -24,6 +29,9 @@ $grey: #555555;
     .new-task-detail {
       width: 300px;
       margin-bottom: 25px;
+      @media screen and (max-width: 320px) {
+        width: 100%;
+      }
 
       .new-task-detail {
         height: 200px;
